--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -174,7 +174,6 @@ gui.config.gui.custom_browser = Browserpfad
 gui.config.gui.custom_browser_param = Parameter %url (Pro Zeile ein Parameter)
 gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.disabletooltipps = ToolTipps der DownloadListe abschalten
-gui.config.gui.extended = Erweiterte Einstellungen
 gui.config.gui.language = Sprache
 gui.config.gui.languagefileinfo = Momentane Sprachdatei: %s übersetzt von %s in Version %s
 gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
@@ -601,7 +600,6 @@ gui.treetable.header_4.status = Status
 gui.treetable.header_5.progress = Fortschritt
 gui.treetable.packagestatus.links_active = aktiv
 gui.treetable.part.label = Datei
-gui.treetable.part.label_package = Paket
 gui.treetable.part.label_update = Update
 gui.treetable.parts = Teil(e)
 gui.warning.reconnect.close = Fenster schließen
@@ -633,30 +631,6 @@ interaction.batchreconnect.tostring = Batch Reconnect durchführen
 interaction.batchreconnect.waitforip = Auf neue IP warten [sek]
 interaction.batchreconnect.waitfortermination = Wartezeit bis der Befehl beendet ist [sek]
 interaction.batchreconnect.waittimetofirstipcheck = Wartezeit bis zur ersten IP-Überprüfung [sek]
-interaction.dlcconverter.ccf = *.CCF:
-interaction.dlcconverter.container = Diese Container werden eingelesen:
-interaction.dlcconverter.dlc = *.DLC:
-interaction.dlcconverter.format = Ausgabe Parameter:
-interaction.dlcconverter.infile = In Datei speichern:
-interaction.dlcconverter.log = Im Log:
-interaction.dlcconverter.mirrors = Anzahl de Mirrors:
-interaction.dlcconverter.name = DLC erstellen
-interaction.dlcconverter.output = Ausgabe der Links:
-interaction.dlcconverter.outputtype = Ausgabeformatierung:
-interaction.dlcconverter.pastebincom = pastebin.com:
-interaction.dlcconverter.progress.0_title = DLC Converter
-interaction.dlcconverter.progress.1 = DLC Converter: parse Container
-interaction.dlcconverter.progress.2_pastebin = DLC Converter: Upload, Rapidshare.com
-interaction.dlcconverter.progress.2_uploaded = DLC Converter: Upload, uploaded.to
-interaction.dlcconverter.progress.3_pastebin = DLC Converter: Upload, pastebin.com
-interaction.dlcconverter.progress.4_pastebin = DLC Converter: Upload, ramzal.com
-interaction.dlcconverter.ramzal = ramzal.com:
-interaction.dlcconverter.rapidshare = rapidshare.com:
-interaction.dlcconverter.rsdf = *.RSDF:
-interaction.dlcconverter.uploadedto = Uploaded.to:
-interaction.dlcconverter.uploadedto.pass = Premium Passwort:
-interaction.dlcconverter.uploadedto.user = Premium Benutzer:
-interaction.dlcconverter.window = Messagebox:
 interaction.externexecute.cmd = Befehl (absolute Pfade verwenden)
 interaction.externexecute.disable = Event deaktiviert
 interaction.externexecute.executein = Ausführen in (Ordner der Anwendung)
@@ -822,12 +796,9 @@ plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
 plugins.host.fastload.prepare = Warte auf Linkbestätigung
-plugins.host.fastload.ticketmessage = Kaufen Sie sich ein Fastloadspeedticket um die Geschwindigkeit auf 300kb/s zu erhähen
-plugins.host.fastload.wait_ticketmessage = Warten auf Speedticket
 plugins.host.gigasize.freeaccount.pass = Passwort
 plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
 plugins.host.gigasize.freeaccount.user = eMail
-plugins.host.httpallgemein.disable = Plugin deaktivieren
 plugins.host.meinupload.serverdefect = Service nicht verfügbar
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
@@ -848,7 +819,6 @@ plugins.hoster.general.passwordprotectedinput = Die Links sind mit einem Passwor
 plugins.hoster.passquestion = Link '%s' ist Passwortgeschützt. Passwort eingeben:
 plugins.hoster.premium.status_ok = Account ist OK
 plugins.hoster.premiumtab = Premium Einstellungen
-plugins.hoster.rapidshare.com.extendedtab = Erweiterte Einstellungen
 plugins.hoster.rapidshare.com.increasetickettime = Ticketwartezeit verlängern (0%-500%)
 plugins.hoster.rapidshare.com.prefferedserver = Bevorzugte Server
 plugins.hoster.rapidshare.com.prefferedserver.random = Zufällig
@@ -858,7 +828,6 @@ plugins.hoster.uploadedto.chunks = Premium Verbindungen # (>1 verursacht höhere
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Konfiguration
 plugins.menu.enable_premium = Account aktivieren
-plugins.menu.fastload = Hole Freeticket
 plugins.menu.fastload_refresh = Alle Tickets aktualisieren
 plugins.menu.noaccountsyet = Keine Accounts eingerichtet
 plugins.menu.premiuminfo = AccountInfo holen
@@ -937,23 +906,18 @@ plugins.optional.jdunrar.menu.queue.start = Starte Warteschlange
 plugins.optional.jdunrar.menu.toggle = Aktivieren
 plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Entpacke %s
-plugins.optional.langfileeditor.addkey = Schlüssel hinzufügen
 plugins.optional.langfileeditor.adoptdefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptdefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
-plugins.optional.langfileeditor.adoptdefaultvalue = Standardwert übernehmen
-plugins.optional.langfileeditor.browse = Auswählen
 plugins.optional.langfileeditor.clearallvalues = Alle Werte löschen
 plugins.optional.langfileeditor.clearvalues = Werte löschen
 plugins.optional.langfileeditor.close = Schliessen
-plugins.optional.langfileeditor.colorize = Einfärbung
 plugins.optional.langfileeditor.colorizemissing = Fehlende Einträge einfärben
 plugins.optional.langfileeditor.colorizeold = Alte Einträge einfärben
-plugins.optional.langfileeditor.deleteselectedkeys = Ausgewählte(n) Schlüssel löschen
+plugins.optional.langfileeditor.continuesearch = Weitersuchen
+plugins.optional.langfileeditor.deletekeys = Schlüssel löschen
 plugins.optional.langfileeditor.download = SourceCode herunterladen
 plugins.optional.langfileeditor.downloadsource = Der Sourcecode kann über SVN geladen werden.\Das SVN repository ist %s\nKlicke ok um es zu öffnen
 plugins.optional.langfileeditor.duplicatedentries = Doppelte Einträge
-plugins.optional.langfileeditor.editselectedvalues = Ausgewählte(n) Schlüssel bearbeiten
-plugins.optional.langfileeditor.editvalue = Wert bearbeiten
 plugins.optional.langfileeditor.entries = Einträge
 plugins.optional.langfileeditor.file = Datei
 plugins.optional.langfileeditor.filefilter = LanguageFiles (*.lng)
@@ -978,12 +942,11 @@ plugins.optional.langfileeditor.save.error.title = Fehler!
 plugins.optional.langfileeditor.save.success.message = LanguageFile erfolgreich gespeichert!
 plugins.optional.langfileeditor.save.success.title = Speichern erfolgreich!
 plugins.optional.langfileeditor.saveas = Speichern Als
+plugins.optional.langfileeditor.search = Suchen
+plugins.optional.langfileeditor.searchfor = Suche nach String: (Startposition ist die erste ausgewählte Zeile)
 plugins.optional.langfileeditor.secondkey = Zweiter Key
-plugins.optional.langfileeditor.selectmissing = Fehlende Einträge auswählen
-plugins.optional.langfileeditor.selectold = Alte Einträge auswählen
 plugins.optional.langfileeditor.show_gui = LanguageEditor starten
 plugins.optional.langfileeditor.showdupes = Doppelte Einträge anzeigen
-plugins.optional.langfileeditor.sortentries = Einträge sortieren
 plugins.optional.langfileeditor.sourcefile = Quelle (Datei):
 plugins.optional.langfileeditor.sourcefolder = Quelle (Ordner):
 plugins.optional.langfileeditor.sourcevalue = Wert von Quelle
