--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -943,7 +943,7 @@ plugins.optional.langfileeditor.key = Key
 plugins.optional.langfileeditor.keychart = KeyChart
 plugins.optional.langfileeditor.keychart.done = Done
 plugins.optional.langfileeditor.keychart.missing = Missing
-plugins.optional.langfileeditor.keychart.old = Probably Old
+plugins.optional.langfileeditor.keychart.old = Old
 plugins.optional.langfileeditor.languagefile = Language File: 
 plugins.optional.langfileeditor.languagefilevalue = Language File Value
 plugins.optional.langfileeditor.name = JDLangFileEditor
