--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -182,6 +182,7 @@ gui.config.gui.plaf = Style (restart to apply)
 gui.config.gui.showsplash = Show splash screen on program startup
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Test browser
+gui.config.gui.testbrowser.error = Browser launcher failed: %s
 gui.config.gui.testbrowser.message = JDownloader now tries to open http://jdownloader.org in your browser.
 gui.config.gui.theme = Theme
 gui.config.gui.use_custom_browser = Use custom browser
@@ -491,11 +492,17 @@ gui.menu.action.reconnect.accel = CTRL+R
 gui.menu.action.reconnect.desc = Do a manual reconnect
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Manual reconnect
+gui.menu.action.remove.links.accel = -
 gui.menu.action.remove.links.desc = Remove completed Downloads
+gui.menu.action.remove.links.mnem = -
 gui.menu.action.remove.links.name = Remove completed Downloads
+gui.menu.action.remove.packages.accel = -
 gui.menu.action.remove.packages.desc = Remove completed Packages
+gui.menu.action.remove.packages.mnem = -
 gui.menu.action.remove.packages.name = Remove completed Packages
-gui.menu.action.restart.desc = restart JDownloader
+gui.menu.action.restart.accel = -
+gui.menu.action.restart.desc = Restart JDownloader
+gui.menu.action.restart.mnem = -
 gui.menu.action.restart.name = Restart
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Save download list in DLC format
@@ -804,6 +811,7 @@ plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
 plugins.host.enterlinkpassword = Please enter Linkpassword
+plugins.host.fastload.errors = Browserlauncher missconfigured
 plugins.host.fastload.prepare = Wait for linkconfirmation
 plugins.host.gigasize.freeaccount.pass = Password
 plugins.host.gigasize.freeaccount.use = Use Free account
@@ -850,6 +858,7 @@ plugins.netload.downloadpassword_wrong = Linkpassword is wrong
 plugins.optional.folderwatch.checkintervall = Checkintervall [min]
 plugins.optional.folderwatch.folder = Folder:
 plugins.optional.folderwatch.name = FolderWatch
+plugins.optional.hjsplit.filefilter = HJSPLIT-Startvolumes
 plugins.optional.hjsplit.menu.config = Settings
 plugins.optional.hjsplit.menu.extract.singlefils = Merge archive(s)
 plugins.optional.hjsplit.menu.toggle = Activate
@@ -907,7 +916,10 @@ plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.jdunrar.askforpassword = Password for %s?
 plugins.optional.jdunrar.config.advanced = Advanced settings
 plugins.optional.jdunrar.config.passwordlist = List of all passwords. Each line one password
+plugins.optional.jdunrar.config.passwordlist.import = Import old passwordlist
+plugins.optional.jdunrar.config.passwordlist.import.message = Do you really want to import the old password list?
 plugins.optional.jdunrar.config.passwordtab = List of passwords
+plugins.optional.jdunrar.filefilter = Rar-Startvolumes
 plugins.optional.jdunrar.linkmenu.extract = Extract
 plugins.optional.jdunrar.linkmenu.openextract = Open directory
 plugins.optional.jdunrar.linkmenu.package.extract = Extract package
