--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -182,6 +182,7 @@ gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.testbrowser = Browser testen
+gui.config.gui.testbrowser.error = Browser-Start fehlgeschlagen: %s
 gui.config.gui.testbrowser.message = JDownloader versucht nun http://jdownloader.org in dem Browser zu öffnen.
 gui.config.gui.theme = Theme
 gui.config.gui.use_custom_browser = Benutze benutzerdefinierten Browser
@@ -489,12 +490,18 @@ gui.menu.action.reconnect.accel = CTRL+R
 gui.menu.action.reconnect.desc = Einen manuellen Reconnect durchführen
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Reconnect durchführen
+gui.menu.action.remove.links.accel = -
 gui.menu.action.remove.links.desc = Entferne vollständige Downloads
+gui.menu.action.remove.links.mnem = -
 gui.menu.action.remove.links.name = Entferne vollständige Downloads
+gui.menu.action.remove.packages.accel = -
 gui.menu.action.remove.packages.desc = Entferne vollständige Packages
+gui.menu.action.remove.packages.mnem = -
 gui.menu.action.remove.packages.name = Entferne vollständige Packages
+gui.menu.action.restart.accel = -
 gui.menu.action.restart.desc = JDownloader neustarten
-gui.menu.action.restart.name = Restart
+gui.menu.action.restart.mnem = -
+gui.menu.action.restart.name = Neustart
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Als DLC speichern
 gui.menu.action.save.mnem = S
@@ -797,6 +804,7 @@ plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
+plugins.host.fastload.errors = Browser falsch konfiguriert
 plugins.host.fastload.prepare = Warte auf Linkbestätigung
 plugins.host.gigasize.freeaccount.pass = Passwort
 plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
@@ -838,6 +846,7 @@ plugins.netload.downloadpassword_wrong = Passwort ist falsch.
 plugins.optional.folderwatch.checkintervall = Checkintervall [min]
 plugins.optional.folderwatch.folder = Ordner:
 plugins.optional.folderwatch.name = FolderWatch
+plugins.optional.hjsplit.filefilter = HJSPLIT-Startdateien
 plugins.optional.hjsplit.menu.config = Einstellungen
 plugins.optional.hjsplit.menu.extract.singlefils = Archiv(e) zusammenführen
 plugins.optional.hjsplit.menu.toggle = Aktivieren
@@ -895,7 +904,10 @@ plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.jdunrar.askforpassword = Passwort für %s?
 plugins.optional.jdunrar.config.advanced = Erweiterte Einstellungen
 plugins.optional.jdunrar.config.passwordlist = Liste aller Passwörter. Ein Passwort pro Zeile
+plugins.optional.jdunrar.config.passwordlist.import = Alte Passwortliste importieren
+plugins.optional.jdunrar.config.passwordlist.import.message = Alte Passwortliste wirklich importieren?
 plugins.optional.jdunrar.config.passwordtab = Passwort-Liste
+plugins.optional.jdunrar.filefilter = RAR-Startdateien
 plugins.optional.jdunrar.linkmenu.extract = Entpacken
 plugins.optional.jdunrar.linkmenu.openextract = Öffne Verzeichnis
 plugins.optional.jdunrar.linkmenu.package.extract = Paket entpacken
