--- a/trunk/ressourcen/jd/languages/Italiano.lng
+++ b/trunk/ressourcen/jd/languages/Italiano.lng
@@ -1,7 +1,7 @@
 $translater$ = sna696
-$version$ = $Revision:$
-addons.jdlowspeed.statusmessage.disabled = Disattiva rilevamento scarsità  di banda
-addons.jdlowspeed.statusmessage.enabled = Abilita rilevamento lentezza banda
+$version$ = $Revision$
+addons.jdlowspeed.statusmessage.disabled = Disattiva rilevamento banda
+addons.jdlowspeed.statusmessage.enabled = Abilita rilevamento banda
 addons.jdshutdown.statusmessage.disabled = Il sistema non verrà spento da JDownloader
 addons.jdshutdown.statusmessage.enabled = JDownloader spegnerà il sistema alla fine del download
 addons.schedule.menu.add = Aggiungi
@@ -27,10 +27,10 @@ container.message.comment = Commento
 container.message.created = Creato con
 container.message.password = Password
 container.message.title = Caricato DownloadLinkContainer
-container.message.uploaded = Portato a voi da
+container.message.uploaded = Caricato da
 controller.packages.defaultname = Vari
 controller.status.agb_tos = AGB/TOS non firmato
-controller.status.connectionproblems = Connessione persa
+controller.status.connectionproblems = Connessione caduta
 controller.status.containererror = Container sconosciuto
 controller.status.fileexists.overwritefailed = Impossibile sovrascrivere
 controller.status.fileexists.skip = File già esistente
@@ -50,17 +50,17 @@ download.connection.idle = Inattivo
 download.connection.normal = Download
 download.error.message.connectioncopyerror = Impossibile clonare la connessione
 download.error.message.incomplete = Download Incompleto
-download.error.message.iopermissions = Nessun permesso di scrittura su dsico fisso
+download.error.message.iopermissions = Nessun permesso di scrittura su disco fisso
 download.error.message.outofmemory = Il sistema di download non ha memoria suffciiente
 download.error.message.rangeheaderparseerror = Formato non previsto intervallo header:
 download.error.message.rangeheaders = Il servere non supporta la gestioen dei segmenti
 download.error.message.unavailable = Servizio temporaneamente non disponibile
-downloadlink.status.error.agb_not_signed = TOSs non firmato
+downloadlink.status.error.agb_not_signed = TOS non firmato
 downloadlink.status.error.captcha_wrong = Errore Captcha
 downloadlink.status.error.download_limit = Raggiunti limiti Download
 downloadlink.status.error.downloadfailed = Download fallito
-downloadlink.status.error.fatal = Errore fatale
-downloadlink.status.error.file_exists = File già  esistente
+downloadlink.status.error.fatal = Errore critico
+downloadlink.status.error.file_exists = File già esistente
 downloadlink.status.error.file_not_found = File non trovato
 downloadlink.status.error.no_connection = Nessuna connesisone
 downloadlink.status.error.premium = Errore Premium
@@ -77,7 +77,7 @@ gui.btn_ok = OK
 gui.btn_select = Seleziona
 gui.captchawindow.askforinput = Inserire
 gui.captchawindow.title = jAnticaptcha attivato!
-gui.captchawindow.title_error = JAntiCaptcha fallito. Inserire il codice!
+gui.captchawindow.title_error = Codice JAntiCaptcha errato. Reinserire il codice!
 gui.column_agb = AGB
 gui.column_agbchecked = Accettato
 gui.column_coder = Creatore
@@ -138,18 +138,18 @@ gui.config.eventmanager.trigger.btn = Modifica attivatore
 gui.config.fengshui.expertview = Configurazione avanzata
 gui.config.fengshui.fritzbox.title = Router rilevato: Fritz!Box
 gui.config.fengshui.fritzbox.upnp.checkbox = Non visualizzare più questo messaggio
-gui.config.fengshui.fritzbox.upnpactive = Avete un router Fritz!Box. abilitate il UPNP nel vostro  Fritz!box.
+gui.config.fengshui.fritzbox.upnpactive = Avete un router Fritz!Box. abilitate il UPNP nel vostro Fritz!box.
 gui.config.fengshui.fritzbox.upnpinactive = Abilitare l'UPNP nel vostro router Fritz!Box <br><a href="http://%s">to Fritz!Box Webinterface</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wiki: Fritz!Box Upnp</a>
 gui.config.general.createsubfolders = Crea sottocartella con il nome del file (se possibile)
 gui.config.general.downloaddirectory = Cartella download
 gui.config.general.filelogger = Crea file di log nella cartella ./logs/
 gui.config.general.loggerlevel = Livello di Log
 gui.config.general.name = Generale
-gui.config.general.todowithdownloads = Rimuovi downlaod completati...
+gui.config.general.todowithdownloads = Rimuovi downlaod completati
 gui.config.general.todowithdownloads.atstart = all'avvio
-gui.config.general.todowithdownloads.immediate = Immediato
+gui.config.general.todowithdownloads.immediate = immediatamente
 gui.config.general.todowithdownloads.never = mai
-gui.config.general.todowithdownloads.packageready = quando il package è pronto
+gui.config.general.todowithdownloads.packageready = a package scaricato
 gui.config.general.webupdate.auto = Aggiornamento web: avvia automaticamente!
 gui.config.general.webupdate.disable = Aggiorna solo su richiesta utente
 gui.config.gui.autopackagelimit = Soglia per creazione automatica del pacchetto
@@ -198,7 +198,7 @@ gui.config.packagemanager.table.info = Informazioni
 gui.config.plugin.abg_confirm = Ho letto AGB/TOS/FAQ di %s e accetto!
 gui.config.plugin.decrypt.btn_load = Carica plugin
 gui.config.plugin.host.btn_load = Carica plugin
-gui.config.plugin.host.desc = ATTENZIONE!!\r\nIl team di jDownloader non si assume alcuna responsabilità  riguardo i TOS dei vari server. \r\nPer cortesia leggere ed attivare il plugin relativo solo \r\nse accettate completamente i TOS!\r\nL'ordine dei plugin definisce la priorità  della selezione automatica del server alternativo.\n\rI plugin preferiti devono essere i primi!
+gui.config.plugin.host.desc = ATTENZIONE!!\r\nIl team di jDownloader non si assume alcuna responsabilità riguardo i TOS dei vari server. \r\nPer cortesia leggere ed attivare il plugin relativo solo \r\nse accettate completamente i TOS!\r\nL'ordine dei plugin definisce la priorità  della selezione automatica del server alternativo.\n\rI plugin preferiti devono essere i primi!
 gui.config.plugin.host.name = Server plugin
 gui.config.plugin.host.readagb = Leggi TOS
 gui.config.plugin.optional.btn_opendir = Apri cartella dei plugin
@@ -396,7 +396,7 @@ gui.menu.action.edit.items_bottom.name = Sposta in basso
 gui.menu.action.edit.items_down.accel = ALT+GIU
 gui.menu.action.edit.items_down.desc = Sposta elementi selezionati giÑ di una linea
 gui.menu.action.edit.items_down.mnem = U
-gui.menu.action.edit.items_down.name = Muovi giÑ
+gui.menu.action.edit.items_down.name = Muovi giù
 gui.menu.action.edit.items_remove.accel = CANC
 gui.menu.action.edit.items_remove.desc = Rimuovi voce dalla lista
 gui.menu.action.edit.items_remove.mnem = D
@@ -576,7 +576,7 @@ init.webupdate.progress.0_title = Aggiornamento web
 init.webupdate.progress.1_title = Controllo aggiornamenti
 installer.abortinstallation = Errore: installazione annullata
 installer.error.nowriterights = Errore. Non avete i permessi per scrivere nella cartella
-installer.welcome = Benvenuti in jDownloader. Il programma di installazione aggiornerà  alcun file.
+installer.welcome = Benvenuti in jDownloader.
 interaction.batchreconnect.batch = Script batch
 interaction.batchreconnect.dooutput = Scrivi i risultati nel file di log
 interaction.batchreconnect.executein = Avvia in (cartella applicazione)
@@ -699,7 +699,7 @@ locale.lngs.romanian = Romeno
 locale.lngs.russian = Russo
 locale.lngs.spanish = Spangolo
 locale.lngs.swedish = Scedese
-main.start.logwarning.body = ATTENZIONE: Il livello di log è impostato a %s e il salvataggio dei log è %s. Queste impostazioni sono raccomandate solo in caso di problemi.
+main.start.logwarning.body = ATTENZIONE: Il log è impostato a %s e il salvataggio dei log è %s. Queste impostazioni sono raccomandate solo in caso di problemi.
 main.start.logwarning.title = Log avvisi
 main.status.active = on
 main.status.inactive = no
